k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-frontend-ingress
  namespace: demo-app
  annotations:
    
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
     
spec:
  ingressClassName: nginx

  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-frontend-service
                port:
                  number: 80
